--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-header></app-header>
-<app-post-create></app-post-create>
+<main md-colors="{background: 'white' !important}">
+    <app-post-create></app-post-create>
+    <app-post-list></app-post-list>
+</main>
+
 
