--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,10 +1,37 @@
 <mat-card>
-    <mat-form-field>
-        <textarea matInput name="" id="" cols="30" rows="6" [(ngModel)]="enteredValue"></textarea>
-    </mat-form-field>
-    <button
-      mat-raised-button
-      color="accent"
-      (click)="onAddPost()">Save Post</button>
+  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+      <mat-form-field>
+          <input
+          matInput
+          type="text"
+          name="title"
+          ngModel
+          required
+          minlength="3"
+          placeholder="Post Title"
+          #title="ngModel"
+         >
+        <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
+        </mat-form-field>
+          <mat-form-field>
+            <textarea
+            matInput name=""
+            name="content"
+            id=""
+            cols="30"
+            rows="4"
+            ngModel
+            required
+            minlength="4"
+            placeholder="Content"
+            #content="ngModel"
+            ></textarea>
+          <mat-error *ngIf="content.invalid">Please enter content</mat-error>
+          </mat-form-field>
+          <button
+            mat-raised-button
+            color="accent"
+            type="submit">Save Post</button>
+  </form>
 </mat-card>
-<p>{{ newPost }}</p>
+
