--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-header></app-header>
 <main md-colors="{background: 'white' !important}">
-    <app-post-create></app-post-create>
-    <app-post-list></app-post-list>
+    <!-- <app-post-create></app-post-create>
+    <app-post-list></app-post-list> -->
+    <router-outlet></router-outlet>
 </main>
 
 
