--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,37 +1,33 @@
 <mat-card>
-  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
+    <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
       <mat-form-field>
-          <input
+        <input
           matInput
           type="text"
           name="title"
-          ngModel
+          [ngModel]="post?.title"
           required
           minlength="3"
           placeholder="Post Title"
-          #title="ngModel"
-         >
-        <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
-        </mat-form-field>
-          <mat-form-field>
-            <textarea
-            matInput name=""
-            name="content"
-            id=""
-            cols="30"
-            rows="4"
-            ngModel
-            required
-            minlength="4"
-            placeholder="Content"
-            #content="ngModel"
-            ></textarea>
-          <mat-error *ngIf="content.invalid">Please enter content</mat-error>
-          </mat-form-field>
-          <button
-            mat-raised-button
-            color="accent"
-            type="submit">Save Post</button>
-  </form>
-</mat-card>
+          #title="ngModel">
+        <mat-error *ngIf="title.invalid">Please enter a post title.</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <textarea
+          matInput
+          rows="4"
+          name="content"
+          [ngModel]="post?.content"
+          required
+          placeholder="Post Content"
+          #content="ngModel"></textarea>
+        <mat-error *ngIf="content.invalid">Please enter a post title.</mat-error>
+      </mat-form-field>
+      <button
+        mat-raised-button
+        color="accent"
+        type="submit">Save Post</button>
+    </form>
+  </mat-card>
 
