--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -6,8 +6,8 @@
       {{ post.content}}
 
           <mat-action-row>
-            <button mat-button color="primary">EDIT</button>
-            <button mat-button color="warn" (click)='onDelete(post.id)'>DELETE</button>
+            <a mat-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
+            <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
           </mat-action-row>
 
   </mat-expansion-panel>
