--- a/src/app/posts/post-create/post-create.component.css
+++ b/src/app/posts/post-create/post-create.component.css
@@ -2,3 +2,12 @@ mat-form-field, textarea {
  width: 100%;
  margin-bottom: 1rem
 }
+
+mat-spinner {
+  margin: auto
+}
+
+input[type="file"] {
+  visibility: hidden
+
+}
